2002-01-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextsrc_la_LDFLAGS): Add -lc. Needed on AIX.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	* x-c.c (buflen): Make static.
	* x-librep.c (buflen): Likewise.
	* x-lisp.c (buflen): Likewise.

2001-12-23  Bruno Haible  <bruno@clisp.org>

	* msgexec.c (process_string): Use xsetenv instead of setenv.
	* msginit.c (canonical_locale_charset): Likewise.
	(get_title): Likewise.

2001-12-22  Bruno Haible  <bruno@clisp.org>

	* dir-list.c: Include <stddef.h> instead of <stdlib.h>.
	* xgettext.h: Likewise.
	* file-list.c: Include exit.h instead of system.h.
	* gettext.c: Likewise.
	* hostname.c: Likewise.
	* msgattrib.c: Likewise.
	* msgcat.c: Likewise.
	* msgcomm.c: Likewise.
	* msgconv.c: Likewise.
	* msgexec.c: Likewise.
	* msgunfmt.c: Likewise.
	* msguniq.c: Likewise.
	* ngettext.c: Likewise.
	* read-java.c: Likewise.
	* x-ycp.c: Likewise.
	* msgcmp.c: Include exit.h instead of system.h. Don't include
	str-list.h.
	* msgfilter.c: Likewise.
	* msgen.c: Include exit.h instead of system.h. Don't include xmalloc.h.
	* msgfmt.c: Include exit.h, stpcpy.h instead of system.h. Don't
	include <errno.h>, getline.h.
	* msggrep.c: Include exit.h instead of system.h. Don't include
	<fcntl.h>.
	* msginit.c: Include liballoca.h, <limits.h>, exit.h, pathname.h
	instead of system.h.
	* msgl-cat.c: Include liballoca.h, exit.h instead of system.h.
	Include <stddef.h> instead of <stdlib.h>.
	* msgl-charset.c: Likewise.
	* msgl-iconv.c: Include liballoca.h, exit.h instead of system.h.
	* write-po.c: Likewise.
	* msgmerge.c: Include liballoca.h, exit.h, strcase.h, stpcpy.h,
	stpncpy.h instead of system.h.
	* format-java.c: Include liballoca.h instead of system.h.
	* format-lisp.c: Don't include system.h.
	* open-po.c: Include pathname.h, xmalloc.h instead of system.h.
	Don't include <sys/types.h>, error.h.
	* po-charset.c: Include liballoca.h, string.h, strcase.h instead of
	system.h. Don't include error.h. Include progname.h.